--- a/css/style.css
+++ b/css/style.css
@@ -387,6 +387,7 @@ button .fa-shopping-cart {
     margin-bottom: 5px;
   }
 }
+/*
 html::-webkit-scrollbar {
   width: 15px;
   border-radius: 20px;
@@ -397,7 +398,9 @@ html::-webkit-scrollbar-truck {
 html::-webkit-scrollbar-thumb {
   background: linear-gradient(to bottom, var(--main-color) var(--text-color));
   border-radius: 20px;
-} /****  CHECKOUT PAGE STYLES *****/
+} */
+  
+/****  CHECKOUT PAGE STYLES *****/
 .main {
   max-width: 1100px;
   padding-left: 30px;
