--- a/css/style.css
+++ b/css/style.css
@@ -259,6 +259,7 @@ header {
   background-position: left center;
   background-size: cover; 
   background-repeat: no-repeat; 
+  padding: 10px 20px
 }
 
 /*
