--- a/css/style.css
+++ b/css/style.css
@@ -46,13 +46,13 @@ body {
   height: 60px;
 }
 
-a .nav-logo {
+.nav-logo {
   display: flex;
   align-items: center;
   gap: 10px;
 }
 
-a .nav-logo p {
+.nav-logo p {
   color: var(--main-color);
   font-size: 20px;
   text-transform: capitalize;
