--- a/css/style.css
+++ b/css/style.css
@@ -956,3 +956,25 @@ body.details-page {
 .icon-circle i:hover {
   color: #0056b3;
 }
+
+.toast {
+  visibility: hidden;
+  min-width: 200px;
+  background-color: var(--accent-color);
+  color: var(--text-mix-color);
+  text-align: center;
+  border-radius: 8px;
+  padding: 12px;
+  position: fixed;
+  bottom: 40px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1000;
+  opacity: 0;
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+}
+
+.toast.show {
+  visibility: visible;
+  opacity: 1;
+}
