--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url(../fontawesome-free-6.6.0-web/fontawesome-free-6.6.0-web/css/all.css);
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css);
 @import url(style-footer.css);
 :root {
   --accent-color: #007bff;
