--- a/auth/css/auth-styles.css
+++ b/auth/css/auth-styles.css
@@ -3,13 +3,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #f5f5f5;
+    background-color: var(--random-color);
     margin: 0px;
 }
 
 .login-box {
-    margin-top: 90px;
-    background: white;
+    margin-top: 70px;
+    margin-bottom: 70px;
+    background: var(--text-mix-color);
     padding: 2rem;
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
@@ -24,9 +25,12 @@
 }
 
 .subtitle {
-    color: #666;
+    color: var(--text-color);
     text-align: center;
     margin-bottom: 2rem;
+    font-size: 1.2rem;
+    font-weight: 400;
+    line-height: 1.5;
 }
 
 .input-group {
@@ -37,7 +41,7 @@
 .input-group input {
     width: 100%;
     padding: 10px 35px;
-    border: 1px solid #ddd;
+    border: 1px solid var(--random-color);
     border-radius: 5px;
     font-size: 1rem;
 }
@@ -47,7 +51,7 @@
     left: 10px;
     top: 50%;
     transform: translateY(-50%);
-    color: #666;
+    color: var(--input-icon-color);
 }
 
 /*
@@ -69,7 +73,7 @@
     width: 100%;
     padding: 12px;
     background: var(--accent-color);
-    color: white;
+    color: var(--text-mix-color);
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -83,7 +87,7 @@
 
 .register-text {
     text-align: center;
-    color: #666;
+    color: var(--input-icon-color);
 }
 
 .register-text a,
