--- a/css/style.css
+++ b/css/style.css
@@ -172,6 +172,30 @@ body {
   }
 }
 
+.user-profile {
+  border: var(--text-color) solid 2px;
+  border-radius: 50px;
+  padding: 2px;
+  width: 45px;
+  height: 45px;
+  margin: 3px;
+}
+.user-profile:hover {
+  background: var(--text-mix-color);
+  cursor: pointer;
+}
+.user-profile img:hover {
+  border: var(--text-mix-color) solid 2px;
+  border-radius: 50px;
+  padding: 2px;
+}
+
+.user-profile img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50px;
+}
+
 /**********************************
 ***********************************
      End  Temporary Header
@@ -736,8 +760,14 @@ input:focus {
 .checkout-header-left-section {
   width: 150px;
 }
-.checkout-header-right-section .fa:hover {
+
+.checkout-header-right-section .fa {
   color: var(--main-color);
+  cursor: pointer;
+}
+
+.checkout-header-right-section .fa:hover {
+  color: var(--text-color);
   cursor: pointer;
 }
 .dambwe-logo {
@@ -995,11 +1025,10 @@ a {
     left: 0;
     right: 0;
     background: var(--nav-background);
-    -webkit-backdrop-filter: blur(10px);
-    backdrop-filter: blur(10px);
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     z-index: 1000;
     padding: 1rem;
+    margin-bottom: 30px;
 }
 
 .quick-nav ul {
@@ -1146,7 +1175,7 @@ a {
     grid-template-columns: 1fr 1fr;
     gap: 2rem;
     padding: 2rem;
-    background: white;
+    background: var(--link-hover);
     border-radius: 16px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
