--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
   padding: 0;
 }
 body {
-  margin: 0 0 55px 0;
+  margin: 0 0 0 0;
   font-family: Roboto, Arial;
   color: var(--text-color);
 }
@@ -234,36 +234,35 @@ body {
   font-size: 48px;
   margin-bottom: 20px;
 }
+
 .hero .btn2 {
   width: auto;
-  height: 58px;
   outline: none;
   border: 1px solid var(--random-color);
-  border-radius: 75px;
-  color: #515151;
+  border-radius: 10px;
   font-size: 15px;
-  font-weight: 500;
-  background: white;
+  font-weight: 700;
+  background: var(--main-color);
   cursor: pointer;
   transition: var(--fades);
-  padding: 10px;
+  padding: 10px 15px;
 }
+
 .hero .btn2 a {
-  text-decoration: none;
-  text-transform: uppercase;
-  color: var(--main-color);
-}
-.hero .btn2 a:hover {
   text-decoration: none;
   text-transform: uppercase;
   color: var(--text-mix-color);
 }
 
-.hero .a:hover {
-  background-color: var(--main-color);
-  color: var(--text-mix-color);
-  border: solid 1px var(--random-color);
+.hero a:hover {
+  color: var(--main-color);
 }
+
+.hero .btn2:hover {
+  background-color: var(--text-mix-color);
+}
+
+/******** products */
 .products {
   padding: 20px;
 }
@@ -312,17 +311,20 @@ body {
 
 .view-details {
   display: flex;
+  justify-content: center;
   align-items: center;
+  text-align: center;
   gap: 10px; /* Adjust the gap between the buttons as needed */
 }
-
+/*
 .view-details .btn1,
 .view-details .btn2 {
   display: flex;
   align-items: center;
   justify-content: center;
+  align-items: center;
 }
-
+*/
 .view-details .btn2 a {
   text-decoration: none;
   color: inherit;
@@ -332,10 +334,9 @@ body {
 }
 
 .btn1 {
-  width: 20%;
   background-color: var(--accent-color);
   color: var(--main-color);
-  border: 2px solid var(--border-color);
+  border: 1px solid var(--random-color);
   border-radius: 5px;
   margin-top: 10px;
   text-align: center;
@@ -345,14 +346,15 @@ body {
   cursor: pointer;
 }
 .btn2 {
-  width: 70%;
   background-color: var(--text-mix-color);
   color: var(--main-color);
-  border: 2px solid var(--accent-color);
+  border: 1px solid var(--random-color);
   border-radius: 5px;
   margin-top: 10px;
   padding: 10px;
   font-size: 16px;
+  text-align: center;
+  align-items: center;
   cursor: pointer;
 }
 
@@ -377,7 +379,7 @@ body {
 /* home categories */
 
 .category {
-  padding: 20px;
+  padding: 10px;
 }
 
 /*
@@ -395,54 +397,56 @@ body {
  /* width: auto; */
 }
 
-a.category-card {
+.category-card {
   border: 1px solid var(--random-color);
   border-radius: 10px;
-  padding: 10px 5px;
+  padding: 5px;
   width: auto;
   text-align: center;
   align-items: center;
   justify-content: center;
   transition: transform 0.2s, opacity 0.2s;
   text-decoration: none;
-  color: var(--text-color);
   display: grid;
   flex-direction: column;
-}
-a.category-card:hover {
-  transform: translateY(-5px);
-  opacity: 0.8;
+  cursor: pointer;
   background-color: var(--accent-color);
   color: var(--text-mix-color);
 }
 
-a.category-card h3:hover {
+.category-card.active {
+  background-color: var(--text-mix-color);
+}
+
+.category-card.active h3 {
+  color: var(--main-color);
+}
+
+.category-card .active h3 {
+  color: var(--accent-color);
+}
+
+.category-card:hover {
+  transform: translateY(-5px);
+  opacity: 0.8;
+  color: var(--accent-color);
+  background-color: var(--text-mix-color);
+}
+
+.category-card h3 {
   color: var(--text-mix-color);
 }
 
-/*
-.category-card h3 {
-  color: var(--main-color);
-  margin-top: 6px;
-  padding: 6px;
+.category-card h3:hover {
+  color: var(--accent-color);
 }
-*/
-h3.category-name {
-  color: #333;
-}
-/*
-.category-card h3 {
-  margin-bottom: 10px;
-}
-
-*/
 
 .view-category:hover {
   background-color: var(--text-mix-color);
   color: var(--border-color);
   border-color: var(--text-color);
 }
-
+/*
 .btn2 {
   width: 70%;
   background-color: var(--text-mix-color);
@@ -459,7 +463,7 @@ h3.category-name {
   background-color: var(--main-color);
   color: var(--text-mix-color);
 }
-
+*/
 .category-card img {
   width: 100%;
   height: 100px;
@@ -479,7 +483,7 @@ h3.category-name {
   padding: 10px;
   display: none;
   position: fixed;
-  bottom: 55px;
+  bottom: 20px;
   right: 20px;
   z-index: 1000;
   transition: var(--fades);
@@ -857,7 +861,10 @@ input:focus {
   .checkout-header-right-section {
     width: auto;
   }
-} /*** mobile navigation ***/
+} 
+
+/*** mobile navigation ***/
+/*
 .nav {
   position: fixed;
   bottom: 0;
@@ -891,6 +898,7 @@ input:focus {
   font-size: 18px;
   text-decoration: none;
 }
+*/
 
 .refresh-indicator {
   display: none;
