--- a/css/style.css
+++ b/css/style.css
@@ -719,7 +719,7 @@ input {
 
 @media (max-width: 480px) {
   .product-grid {
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(2, 1fr);
   }
 
   .category-grid {
