--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,11 @@ body {
   color: var(--text-color);
 }
 
+a {
+  text-decoration: none;
+  color: var(--text-color);
+}
+
 /**********************************
 ***********************************
       Start  Temporary Header
